# SpectralUpsamplingImpls

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.sh
cmake/: includes.cmake
input/: white.spd
lib/: CMakeLists.txt  properties.cmake
lib/spectral/: CMakeLists.txt
lib/spectral/imageutil/: image.cpp
lib/spectral/internal/: CMakeLists.txt
lib/spectral/internal/common/: CMakeLists.txt  util.cpp
lib/spectral/internal/math/: fourier.cpp
lib/spectral/internal/serialization/: envi.cpp  parsers.cpp
lib/spectral/spec/: basic_spectrum.cpp  conversions.cpp  fourier_lut.cpp  fourier_spectrum.cpp  metrics.cpp  properties.cmake  sigpoly_lut.cpp  sp_lut.cpp  spectral_util.cpp  spectral_util_1.cpp  spectral_util_2.cpp  spectral_util_const.cpp  spectral_util_load.cpp  spectral_util_save.cpp
lib/spectral/upsample/: fourier.cpp  glassner_naive.cpp  properties.cmake  sigpoly.cpp  smits.cpp
lib/spectral/upsample/functional/: fourier.cpp  glassner.cpp
resources/: f_emission_lut.eflf  initial_x.txt  readme.txt  sp_lut0.slf  sp_lut1.slf  sp_lut2.slf
src/: CMakeLists.txt  constants.h  includes.cmake  main.cpp  properties.cmake
src/apps/: CMakeLists.txt  properties.cmake
src/apps/converter/: argparse.cpp  properties.cmake
src/apps/experimental/: CMakeLists.txt  main.cpp  properties.cmake
src/apps/precompute_sigpoly/: argparse.h  functions.cpp  functions.h  lutworks.cpp  lutworks.h  main.cpp  properties.cmake
src/apps/upsampler/: argparse.cpp  argparse.h  main.cpp  properties.cmake
src/apps/upsampler/upsamplers/: glassner_naive.cpp  glassner_naive.h
src/color/: conversions.cpp  conversions.h  properties.cmake  spectral_image.cpp  spectral_image.h  spectral_util.cpp  spectral_util.h  spectre.h  spectrum.cpp  spectrum.h
src/common/: constants.h  csv.h  csvutil.h  math.h  parsers.h  progress.cpp  progress.h  properties.cmake
src/comparsion/: main.cpp
src/converter/: main.cpp
src/experimental/: fourier_tests.h  main.cpp
src/exporter/: main.cpp
src/imageutil/: CMakeLists.txt  base_image.h  image.cpp  image.h  pixel.cpp  pixel.h  properties.cmake  spectral_image.cpp  spectral_image.h  spectral_util.cpp  spectral_util.h  spectre.cpp  spectre.h
src/lib/: CMakeLists.txt  conversions.cpp  conversions.h  image_io.cpp  image_io.h  properties.cmake
src/lib/common/: constants.h  csv.h  format.h  lazy_value.h  parsers.cpp  parsers.h  progress.cpp  progress.h  properties.cmake  refl.cpp  refl.h  util.cpp  util.h
src/lib/imageutil/: base_image.h  image.cpp  image.h  pixel.cpp  pixel.h  properties.cmake
src/lib/math/: mat3.h  math.cpp  math.h  math_fwd.h  properties.cmake  vec3.cpp  vec3.h
src/lib/serialization/: CMakeLists.txt  binary.cpp  binary.h  csv.h  properties.cmake
src/lib/spec/: _spectral_image.cpp  basic_spectrum.cpp  basic_spectrum.h  conversions.cpp  conversions.h  properties.cmake  sigpoly_spectrum.cpp  sigpoly_spectrum.h  sp_lut.cpp  sp_lut.h  spectral_image.cpp  spectral_image.h  spectral_util.h  spectral_util_1.cpp  spectral_util_2.cpp  spectrum.cpp  spectrum.h
src/libs/nlohmannjson/: properties.cmake
src/libs/stb/: properties.cmake  stbimpl.c
src/math/: CMakeLists.txt  mat3.cpp  math.cpp  math.h  properties.cmake  vec3.cpp  vec3.h
src/naive_upsampler/: naive_upsampler.cpp  naive_upsampler.h  properties.cmake
src/precompute_fourier/: functions.cpp  functions.h  lutworks.cpp  lutworks.h  main.cpp  properties.cmake
src/precompute_sigpoly/: CMakeLists.txt  functions.h  lutworks.cpp  lutworks.h
src/progress_bar/: progress.cpp  properties.cmake
src/spectral/: CMakeLists.txt  properties.cmake
src/spectral/common/: constants.h  lazy_value.h  util.cpp
src/spectral/imageutil/: image.cpp  image.h  pixel.cpp  pixel.h  properties.cmake
src/spectral/internal/: CMakeLists.txt
src/spectral/internal/common/: properties.cmake  util.cpp
src/spectral/internal/serialization/: parsers.cpp  properties.cmake
src/spectral/math/: mat3.cpp  math.cpp  math_fwd.h  properties.cmake
src/spectral/serialization/: binary.cpp  binary.h  parsers.h
src/spectral/spec/: basic_spectrum.cpp  basic_spectrum.h  conversions.cpp  properties.cmake  sigpoly_spectrum.cpp  sigpoly_spectrum.h  sp_lut.cpp  spectral_image.h  spectral_util.h  spectral_util_1.cpp  spectral_util_2.cpp
src/spectral/upsample/: glassner_naive.h  properties.cmake  sigpoly.cpp  sigpoly.h  smits.cpp  upsampler.h  upsamplers.cpp  upsamplers.h
src/upsamplers/: CMakeLists.txt  glassner_naive.cpp  glassner_naive.h  naive_upsampler.cpp  naive_upsampler.h  properties.cmake  sigpoly.cpp  sigpoly.h  smits.cpp  smits.h  upsampler.h  upsamplers.cpp  upsamplers.h
util/: build_plots.py  plot.py  run_tests.py  util.py
(+27 files in other folders)
