cmake_minimum_required(VERSION 3.21)

set(SPECRAL_PROJECT_NAME Spectral)
project(${SPECTRAL_PROJECT_NAME} CXX)

set(SPECTRAL_PROJECT_ROOT ${PROJECT_SOURCE_DIR})
set(SPECTRAL_LIB_SRC_DIR ${SPECTRAL_PROJECT_ROOT}/lib)
set(SPECTRAL_APPS_SRC_DIR ${SPECTRAL_PROJECT_ROOT}/src)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

include(cmake/includes.cmake)

add_subdirectory(${SPECTRAL_LIB_SRC_DIR})
add_subdirectory(${SPECTRAL_APPS_SRC_DIR})
add_subdirectory(3rd_party)

